--- a/src/main/resources/lang/fr.txt
+++ b/src/main/resources/lang/fr.txt
@@ -1,28 +1,42 @@
-author=Dauphin14
-prefix=[Stargate] 
-teleportMsg=Téléportation Réussie.
-destroyMsg=Portail detruit.
-invalidMsg=Destination invalide.
+# Stargate Legacy Localisation File: French
+# For a more intuitive interface, please use https://translate.sgrewritten.org
+
+author=Damiendier
 blockMsg=Destination bloquée.
-destEmpty=Aucune Destination disponible.
-denyMsg=Accès Refusé.
-
-ecoDeduct=Retrait de %cost%.
-ecoRefund=Remboursement de %cost%.
-ecoObtain=Gain de %cost% du Portail %portal%.
-ecoInFunds=Ressources insuffisantes.
-
-createMsg=Portail Créé
-createNetDeny=Vous n'avez pas accès à ce réseau.
-createGateDeny=Vous n'avez pas accès à ce type de portail.
-createPersonal=Portail créé sur le réseau personnel.
-createNameLength=Nom trop long ou trop court.
-createExists=Il existe déjà un portail avec le même nom.
-createFull=Le reseau est plein.
-createWorldDeny=Vous n'avez pas accès à ce monde.
-createConflict=Ce portail entre en conflit avec un portail déjà existant.
-
-signRightClick=Right click
-signToUse=to use gate
-signRandom=Random
-signDisconnected=Disconnected
+bungeeDeny=Vous n'avez pas la permission de faire des Portail bungee !
+bungeeDisabled=La prise en charge de Bungeecord n'est pas activée.
+bungeeEmpty=Legacy bungee vous demandent de spécifier un portail de destination et un serveur.
+bungeeSign=Téléportation vers :
+createConflict=Ce portail entre en conflit avec un portail existant.
+createExists=Un portail portant ce nom existe déjà !
+createFull=Ce réseau est plein !
+createGateDeny=Vous n'avez pas accès à la disposition de ce Portail !
+createMsg=Portail créée
+createNameLength=Nom trop court ou trop long !
+createNetDeny=Vous n'avez pas accès à ce réseau !
+createPersonal=Création d'un Portail sur le réseau personnel.
+createWorldDeny=Vous n'avez pas accès à ce monde !
+denyMsg=Accès refusé !
+destEmpty=Liste de destination vide !
+destroyMsg=Portail détruit !
+ecoDeduct=Déduction de %cost%.
+ecoInFunds=Fonds insuffisants !
+ecoLoad=Vault a été chargé, mais aucun plugin d'économie n'a pu être connecté
+ecoObtain=Obtenu %cost% par StarGate %portal% !
+ecoRefund=%cost% remboursé
+invalidMsg=Destination invalide !
+portalInfoDestination=Destination : %destination%
+portalInfoName=Nom : %name%
+portalInfoNetwork=%network%
+portalInfoServer=%server%
+portalInfoTitle=[STARGATE INFO]
+prefix=[Stargate] 
+reloaded=Configuration rechargée !
+signDisconnected=Déconnecté
+signInvalidGate=Portail invalide
+signRandom=Aléatoire
+signRightClick=Clic droit
+signToUse=pour utiliser le portail
+teleportMsg=Téléporté !
+vaultLoadError=L'économie est activée, mais Vault n'a pas pu être chargé. Économie désactivée
+vaultLoaded=Vault v%version% trouvé
