--- a/src/main/resources/lang/ja/ja-JP.txt
+++ b/src/main/resources/lang/ja/ja-JP.txt
@@ -53,7 +53,7 @@ conflictSpawn=スポーンチャンクがこのポータルを妨害していま
 
 # Economy
 ecoDeduct=%cost%を差し引きました。
-ecoObtain=StarGate%portal%から%cost%を入手しました！
+ecoObtain=Stargate%portal%から%cost%を入手しました！
 ecoInsolvent=お金が足りません！
 
 #Terminology
