--- a/src/main/resources/lang/nl/config_nl-NL.txt
+++ b/src/main/resources/lang/nl/config_nl-NL.txt
@@ -21,7 +21,7 @@ languageL2=Ondersteunde waardes: %values%
 languageL4=Als SG nog niet beschikbaar is in jouw taal, overweeg dan om een vertaler te worden:
 bungee.UsingBungeeL1=Ben je verbonden met een bungee compatibele proxie?
 bungee.usingBungeeL2=Zet dit op waar als je poorten wilt gaan bouwen met de 'u'-vlag.
-bungee.useRemoteDatabaseL1=Als standaard gebruikt StarGate een lokale SQLite database om de gegevens op te slaan.
+bungee.useRemoteDatabaseL1=Als standaard gebruikt Stargate een lokale SQLite database om de gegevens op te slaan.
 bungee.useRemoteDatabaseL3=Als u een grote server draait, raden wij u aan een externe database te gebruiken.
 bungee.useRemoteDatabaseL4=Houd er rekening mee dat een dergelijke databank nodig is als je poorten met de vlag 'i' wilt bouwen.
 bungee.remoteDatabaseSettings.L1=Alleen toepasbaar als useRemoteDatabase waar is.
@@ -29,8 +29,8 @@ bungee.remoteDatabaseSettings.driverL1=Welk stuurprogramma moet stargate gebruik
 bungee.remoteDatabaseSettings.driverL2=Deze worden momenteel ondersteund: %values%
 bungee.remoteDatabaseSettings.addressL1=Waar kan stargate je database vinden?
 bungee.remoteDatabaseSettings.useSSLL1=Moet stargate SSL gebruiken bij het verbinden met je database?
-bungee.remoteDatabaseSettings.databaseL1=De naam van de database die StarGate zal gaan gebruiken om de gegevens in op te slaan. Moet al bestaan.
-bungee.remoteDatabaseSettings.databaseL2=Als u Bungee gebruikt, moet dit worden gedeeld over alle StarGate instanties.
+bungee.remoteDatabaseSettings.databaseL1=De naam van de database die Stargate zal gaan gebruiken om de gegevens in op te slaan. Moet al bestaan.
+bungee.remoteDatabaseSettings.databaseL2=Als u Bungee gebruikt, moet dit worden gedeeld over alle Stargate instanties.
 bungee.remoteDatabaseSettings.usernameL1=Inloggegevens om te gebruiken voor de verbinding:
 bungee.remoteDatabaseSettings.advancedDatabaseConfigurationL1=Moeten we een database configuratie bestand ('hikari.properties') genereren in je stargate map?
 bungee.remoteDatabaseSettings.advancedDatabaseConfigurationL2=Dit zal alle remoteDatabaseInstellingen hierboven negeren ten gunste van het nieuwe bestand.
@@ -39,7 +39,7 @@ bungee.remoteDatabaseSettings.advancedDatabaseConfigurationL5=Een lijst met besc
 defaultGateNetworkL1=Welk netwerk zal worden gebruikt wanneer er geen is opgegeven? (Maximale lengte 12 tekens)
 defaultGateNetworkL3=Houd er rekening mee dat dit primair van toepassing is op gebruikers met de stargate.create.network knoop
 defaultGateNetworkL4=Over het algemeen wordt deze knoop aan medewerkers gegeven (wij raden stargate.create.personal voor gebruikers aan).
-defaultTerminalNetworkL1=Welk netwerk zal StarGate reserveren voor terminal ('T') portalen?
+defaultTerminalNetworkL1=Welk netwerk zal Stargate reserveren voor terminal ('T') portalen?
 defaultTerminalNetworkL3=In het algemeen wordt deze functie gebruikt om een groep portalen in de spawn bekend te maken als een 'Terminal'.
 defaultTerminalNetworkL4=Met behulp van dit netwerk kunnen spelers tegen betaling hun steden/basissen/winkels/etc. met de terminal verbinden.
 defaultTerminalNetworkL6=Nog niet geïmplementeerd.
@@ -47,7 +47,7 @@ defaultTerminalNetworkL7=Terminalondersteuning is gepland voor %version%!
 
 # Gate Behaviour
 networkLimitL1=Wat is het maximale aantal poorten dat een enkel netwerk mag bevatten? (-1 voor onbeperkt)
-handleVehiclesL1=Zullen voertuigen en hun passagiers via de StarGate portalen kunnen reizen?
+handleVehiclesL1=Zullen voertuigen en hun passagiers via de Stargate portalen kunnen reizen?
 handleVehiclesL2=Mijnkarretjes, boten, & gezadelde mobs = voertuigen | spelers & mobs = passagiers
 handleLeashedCreaturesL1=Als een speler teleporteert terwijl hij aan een entiteit is gekoppeld via een leiband, moet SG de entiteit dan ook teleporteren?
 CheckPortalValidityL1=Zal de server alle bestaande portalen opnieuw verifiëren bij het opstarten?
@@ -59,8 +59,8 @@ gateExitSpeedMultiplierL1=Met welke snelheid moeten spelers uit de portalen word
 gateExitSpeedMultiplierL2=Bij het verlaten van een poort, behouden spelers hun oorspronkelijke bewegingssnelheid, vermenigvuldigd met deze waarde.
 
 # Economy
-useEconomyL1=Zal StarGate interactie hebben met de economie van uw server?
-useEconomyL3=Voor deze functies is StarGate afhankelijk van de Vault plugin.
+useEconomyL1=Zal Stargate interactie hebben met de economie van uw server?
+useEconomyL3=Voor deze functies is Stargate afhankelijk van de Vault plugin.
 taxAccountL1=Heeft jouw server een belastingrekening (gesloten economie)?
 taxAccountL2=Als dit het geval is, geef dan de naam van je belastingrekening op (het geïnde geld wordt er naartoe gestuurd).
 taxAccountL3=Zo niet, laat deze sectie leeg (het geïnde geld wordt verwijderd).
@@ -104,7 +104,7 @@ loggingLevelL10=Aanbevolen voor eenvoudige probleemoplossing
 loggingLevelL11=Beperkte foutopsporingsinformatie afdrukken. Print algemene gebeurtenissen van een plugin (laden, uitschakelen, verbindingen, etc.)
 loggingLevelL12=Aanbevolen voor sommige add-on-ontwikkelaars.
 loggingLevelL13=Print de meeste foutmelding-info. Print gedetailleerde berichten die de logica en het gedrag van de plugin beschrijven.
-LoggingLevelL14=Wordt alleen gebruikt door StarGate's kern ontwikkelingsteam
+LoggingLevelL14=Wordt alleen gebruikt door Stargate's kern ontwikkelingsteam
 LoggingLevelL15=Alles afdrukken. Print letterlijk alles, inclusief vele stapelsporen
 configVersionL1=Een interne waarde die gebruikt wordt door de plugin om te bepalen hoe oud je configuratie is.
 configVersionL2=Wijzig dit alstublieft niet.
